<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/ibb_cardview"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="8dp"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_grey"
            android:gravity="center"
            android:padding="12dp">

            <TextView
                android:id="@+id/ibb_tv_delete_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:text="@string/ibb_quantity"
                android:textColor="@color/dark_blue"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />


            <TextView
                android:id="@+id/ibb_tv_less"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/ring_shape"
                android:gravity="center"
                android:text="@string/ibb_less"
                android:textColor="@color/dark_blue"
                android:layout_below="@+id/ibb_tv_delete_product"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/ibb_tv_more"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/ring_shape"
                android:gravity="center"
                android:text="@string/ibb_more"
                android:textColor="@color/dark_blue"
                android:layout_below="@+id/ibb_tv_delete_product"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:id="@+id/ibb_wanted_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="2"
                android:textColor="@color/dark_blue"
                android:layout_below="@+id/ibb_tv_delete_product"
                android:layout_centerHorizontal="true"
                android:layout_alignBottom="@+id/ibb_tv_more" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>