<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/ipl_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingEnd="12dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingStart="12dp"
        android:paddingTop="16dp">

        <ImageView
            android:id="@+id/ipl_product_picture"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/product_pictures_content_desc" />

        <TextView
            android:id="@+id/ipl_tv_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/ipl_product_picture"
            android:layout_toLeftOf="@+id/ipl_ll_product_price"
            android:layout_toRightOf="@+id/ipl_product_picture"
            android:layout_toStartOf="@+id/ipl_ll_product_price"
            android:textColor="@color/dark_blue" />

        <LinearLayout
            android:id="@+id/ipl_ll_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_toLeftOf="@+id/ipl_ll_product_quantity"
            android:layout_toStartOf="@+id/ipl_ll_product_quantity"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ipl_tv_product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/euro_product"
                android:textColor="@color/dark_blue" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ipl_ll_product_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ipl_tv_product_quantity_nb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20"
                android:textColor="@color/dark_blue" />

            <TextView
                android:id="@+id/ipl_tv_product_quantity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ipl_available"
                android:textColor="@color/dark_blue" />
        </LinearLayout>


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ipl_product"
        android:background="?android:attr/listDivider" />

</RelativeLayout>